--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@heroicons/react": "^1.0.5",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
@@ -16,7 +17,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build-css": "tailwindcss build src/index.css -o public/index.css",
+    "dev": "tailwindcss build src/index.css -o src/index_dev.css",
+    "build-prod": "cross-env NODE_ENV=production tailwindcss build src/index.css -o public/index.css"
   },
   "eslintConfig": {
     "extends": [
@@ -38,7 +42,9 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
+    "cross-env": "^7.0.3",
     "postcss": "^8.4.6",
+    "react-scroll": "^1.8.5",
     "tailwindcss": "^3.0.23"
   }
 }
